== Changelog ==
= 1.5 =
* Feature (Tool): Install dummy data (generate generic brands and assigns them to available products randomly)
* Feature: Import brands from "Ultimate WooCommerce Brands"
* Dev: 'pwb_before_single_product_brands' and 'pwb_after_single_product_brands' hooks added
* Dev: Basic WordPress REST API support
* Enhancement: Better HTML markup for the brand banner and the brand description in the single product page
* Enhancement: Brands importer improvements
* Enhancement: New params for "pwb-all-brands" shortcode
* Fix: Support for php 5.3 again
* Fix: Removed ES6 code from admin for better browser support
* Other minor bug fixes and code improvements
= 1.4.5 =
* Fix carousel shortcodes bugs
* WooCommerce 2.7 support
= 1.4.4 =
* Important improvement of the user experience when assigning images to a brand
* Feature (Option): Hide brands in single product, show as image or show as link
* Feature: Hide prev/next arrows on carousel shortcodes
* Feature: Hide empty brands option for "Display all brands" shortcode
* Feature: New options for "Display brands as list" widget
* Fix: Autoplay bug on carousel shortcodes
* Tested on PHP7
* Shortcut to the plugin settings added to the plugin list page
* "Help us" notice added
* Minor code improvements
= 1.4.3 =
* Feature (Widget): Filter products by brand
* Feature (Option): Show brand logo in product loop
* Feature: Brand microdata added to product page
* Feature (Tool): Migrate brands from "YITH WooCommerce Brands Add-on"
= 1.4.2 =
* Fix: Table collapses in "Admin > Products > Brands" (thanks eljkmw)
* Fix: "pwb-brand" shortcode does not display the brand when it has not a logo assigned
= 1.4.1 =
* Feature (Option): Hide brand's description in archive page
* Fix: "pwb-all-brands" and "pwb-brand" show the content before they should
* Clean database on uninstallation
* Minor code improvements and fixes
= 1.4 =
* Feature: Product carousel by brand added
* Minor bug fixes
= 1.3 =